delete bag street

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,69 @@
  
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
+Assets/BAG.meta
+Assets/BAG/BAG_Streets.meta
+Assets/BAG/BAG_Streets/Materials.meta
+Assets/BAG/BAG_Streets/Shapes.meta
+Assets/BAG/BAG_Streets/Shapes/Materials.meta
+Assets/BAG/BAG_Streets/Textures.meta
+Assets/BAG/BAG_Streets/Textures/Decals.meta
+Assets/BAG/BAG_Streets/Textures/Decals/manholes.meta
+Assets/KudanAR.meta
+Assets/KudanAR/Editor.meta
+Assets/KudanAR/Materials.meta
+Assets/KudanAR/Plugins.meta
+Assets/KudanAR/Plugins/Android.meta
+Assets/KudanAR/Plugins/Android/libs.meta
+Assets/KudanAR/Plugins/Android/libs/armeabi-v7a.meta
+Assets/KudanAR/Plugins/iOS.meta
+Assets/KudanAR/Plugins/x86_64.meta
+Assets/KudanAR/Plugins/x86_64/KudanPlugin.bundle.meta
+Assets/KudanAR/Plugins/x86_64/KudanPlugin.bundle/Contents.meta
+Assets/KudanAR/Plugins/x86_64/KudanPlugin.bundle/Contents/MacOS.meta
+Assets/KudanAR/Plugins/x86_64/KudanPlugin.bundle/Contents/_CodeSignature.meta
+Assets/KudanAR/Prefabs.meta
+Assets/KudanAR/Resources.meta
+Assets/KudanAR/Samples.meta
+Assets/KudanAR/Samples/Flying.meta
+Assets/KudanAR/Samples/KudanSample.meta
+Assets/KudanAR/Samples/Markers.meta
+Assets/KudanAR/Samples/Materials.meta
+Assets/KudanAR/Samples/Models.meta
+Assets/KudanAR/Samples/Models/angelStatue.meta
+Assets/KudanAR/Samples/Models/angelStatue/Materials.meta
+Assets/KudanAR/Samples/Models/angelStatue/Models.meta
+Assets/KudanAR/Samples/Models/angelStatue/Models/Materials.meta
+Assets/KudanAR/Samples/Models/angelStatue/Prefabs.meta
+Assets/KudanAR/Samples/Models/angelStatue/Textures.meta
+Assets/KudanAR/Samples/Scripts.meta
+Assets/KudanAR/Samples/Textures.meta
+Assets/KudanAR/Samples/Touch.meta
+Assets/KudanAR/Scripts.meta
+Assets/KudanAR/Scripts/Classes.meta
+Assets/KudanAR/Scripts/Components.meta
+Assets/KudanAR/Scripts/Components/TrackingMethods.meta
+Assets/KudanAR/Scripts/Components/TransformDrivers.meta
+Assets/Materials.meta
+Assets/Models/Bench.meta
+Assets/Models/Billboard.meta
+Assets/Models/Bus_stop.meta
+Assets/Models/Car.meta
+Assets/Models/Garbage.meta
+Assets/Models/Mailbox.meta
+Assets/Models/Subaru.meta
+Assets/Standard Assets.meta
+Assets/Standard Assets/Tree Creator.meta
+Assets/Standard Assets/Tree Creator/Sources.meta
+Assets/Standard Assets/Tree Creator/Sources/Materials.meta
+Assets/Standard Assets/Tree Creator/Sources/Textures.meta
+Assets/Standard Assets/Tree Creator/Trees.meta
+Assets/Standard Assets/Tree Creator/Trees/BigTree_textures.meta
+Assets/Standard Assets/Water (Basic).meta
+Assets/Standard Assets/Water (Basic)/Sources.meta
+Assets/Standard Assets/Water (Basic)/Sources/Materials.meta
+Assets/Standard Assets/Water (Basic)/Sources/Objects.meta
+Assets/Standard Assets/Water (Basic)/Sources/Objects/Materials.meta
+Assets/Standard Assets/Water (Basic)/Sources/Scripts.meta
+Assets/Standard Assets/Water (Basic)/Sources/Shaders.meta
+Assets/Standard Assets/Water (Basic)/Sources/Textures.meta
